# reminder-hub

./: .gitignore  BUILDING.md  DEVELOPMENT.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/: RELEASE_BODY.md
.github/workflows/: android-release.yml  ci.yml  desktop-release.yml  docker-publish.yml  ios-release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  Dashboard.tsx  Login.tsx  main.tsx  tauri-driver.ts  theme.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
apps/mobile/src/: App.tsx  Dashboard.tsx  (+6 more)
apps/web/: .dockerignore  .env.example  Dockerfile  README.md  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json
llmdoc/: index.md
llmdoc/architecture/: anniversary-module.md  api-routes.md  backup-system.md  dashboard.md  database-schema.md  items-module.md  notification-system.md  search-module.md  settings-module.md  subscription-module.md  theme-system.md  todo-module.md  ui-components.md
llmdoc/guides/: how-to-add-anniversary.md  how-to-add-notification-channels.md  how-to-add-subscription.md  how-to-add-todo.md  how-to-deploy-systemd.md  how-to-deploy-with-docker.md  how-to-migrate-between-deployments.md
llmdoc/overview/: project-overview.md
llmdoc/reference/: coding-conventions.md  git-conventions.md
(+403 files in other folders)
