[package]
name = "reminder-hub-desktop"
version = "0.1.0"
description = "Reminder Hub desktop client"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-sql = { version = "2.2", features = ["sqlite"] }
tauri-plugin-store = "2.2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
